--- a/configs/waybar/style.css
+++ b/configs/waybar/style.css
@@ -1,52 +1,37 @@
 * {
-    font-family: JetBrains Mono, Roboto, Helvetica, monospace, sans-serif;
-    font-size: 13px;
+    font-family: JetBrains Mono;
+    font-size: 11px;
+    border: none;
 }
 
 window#waybar {
-    background-color: rgba(43, 48, 59, 0.5);
-    border-top: 3px solid rgba(100, 114, 125, 0.5);
-    color: #ffffff;
-    transition-property: background-color;
-    transition-duration: .5s;
-}
-
-window#waybar.hidden {
-    opacity: 0.5;
-}
-
-window#waybar.termite {
-    background-color: #3F3F3F;
+    background-color: #002a35;
+    color: #839496;
 }
 
 #workspaces button {
     padding: 0 5px;
     background-color: transparent;
-    color: #ffffff;
-    box-shadow: inset 0 3px transparent;
     border: none;
     border-radius: 0;
+    color: #839496;
 }
 
 #workspaces button:hover {
-    background: rgba(0, 0, 0, 0.2);
-    box-shadow: inset 0 3px #ffffff;
+    color: #cb4b16;
 }
 
 #workspaces button.focused {
-    background-color: #64727D;
-    box-shadow: inset 0 3px #ffffff;
+    color: #b58900;
 }
 
 #workspaces button.urgent {
     background-color: #eb4d4b;
 }
-
 #mode {
-    background-color: #64727D;
-    border-top: 3px solid #ffffff;
+    background-color: #888888;
 }
-
+#language,
 #clock,
 #battery,
 #cpu,
@@ -62,13 +47,10 @@ window#waybar.termite {
 #idle_inhibitor,
 #mpd {
     padding: 0 10px;
-    color: #ffffff;
+    color: #839496;
+    background-color: #002a35;
 }
 
-#window,
-#workspaces {
-    margin: 0 4px;
-}
 
 /* If workspaces is the leftmost module, omit left margin */
 .modules-left > widget:first-child > #workspaces {
@@ -82,7 +64,7 @@ window#waybar.termite {
 
 @keyframes blink {
     to {
-        background-color: #ffffff;
+        background-color: #888888;
         color: #000000;
     }
 }
