--- a/configs/waybar/style.css
+++ b/configs/waybar/style.css
@@ -1,6 +1,6 @@
 * {
     font-family: JetBrains Mono;
-    font-size: 11px;
+    font-size: 8pt;
     border: none;
     font-weight: 400;
 }
@@ -11,7 +11,7 @@ window#waybar {
 }
 
 #workspaces button {
-    padding: 0 5px;
+    padding-left: 5px;
     background-color: transparent;
     border: none;
     border-radius: 0;
