--- a/configs/waybar/style.css
+++ b/configs/waybar/style.css
@@ -1,8 +1,9 @@
 * {
     font-family: JetBrains Mono;
-    font-size: 9pt;
+    font-size: 8pt;
     border: none;
     font-weight: 400;
+    padding: 1 1px;
 }
 
 window#waybar {
@@ -12,19 +13,20 @@ window#waybar {
 }
 
 #workspaces button {
-    padding-left: 5px;
     background-color: transparent;
-    border: none;
-    border-radius: 0;
+    border-radius: 2px;
     color: #839496;
+    margin: 4px 2px;
 }
 
 #workspaces button:hover {
     color: #cb4b16;
+    background-color: #073642;
 }
 
 #workspaces button.focused {
     color: #b58900;
+    background-color: #073642;
 }
 
 #workspaces button.urgent {
@@ -48,13 +50,11 @@ window#waybar {
 #mode,
 #idle_inhibitor,
 #mpd {
-    padding: 0 5px;
+    padding: 0 4px;
     color: #b58900;
-    background-color: #002b36;
-}
-
-#idle_inhibitor {
-    padding-left: 10px;
+    background-color: #073642;
+    border-radius: 2px;
+    margin: 4px 2px;
 }
 
 #window {
@@ -91,8 +91,7 @@ label:focus {
 }
 
 #language {
-    padding: 0 5px;
-    margin: 0 0px;
+    padding: 0 4px;
     min-width: 16px;
 }
 
