--- a/configs/waybar/style.css
+++ b/configs/waybar/style.css
@@ -1,5 +1,5 @@
 * {
-    font-family: JetBrains Mono;
+    font-family: "JetBrains Mono", "Noto Sans";
     font-size: 6pt;
     border: none;
     font-weight: 400;
