--- a/configs/waybar/style.css
+++ b/configs/waybar/style.css
@@ -3,23 +3,34 @@
     font-family: "JetBrains Mono", "Noto Sans";
     font-size: 9pt;
     border: none;
+    border-radius: 0;
     font-weight: 400;
-    padding: 1 1px;
+    padding: 1px 1px;
 }
 
 window#waybar {
-    background-color: @base;
-    color: @yellow;
+    /*background-color: @base;*/
+    color: transparent;
+    background: transparent;
+    padding-left: 16px;
+    padding-right: 16px;
+    margin-top: 8px;
+    border-radius: 32px;
+}
+
+#workspaces {
+    background: @base;
+    transition: none;
+    border-radius: 32px;
+    color: @subtext0;
+    margin: 8px 8px 0;
 }
 
 #workspaces button {
-    background-color: transparent;
-    border-radius: 2px;
-    color: @subtext0;
-    margin: 4px 1px;
+    border-radius: 32px;
 }
 
-#workspaces button:hover {
+button:hover {
     color: @red;
     background-color: @surface1;
 }
@@ -35,34 +46,24 @@ window#waybar {
 #mode {
     background-color: @mantle;
 }
-#language, #clock, #battery, #cpu, #memory, #disk, #temperature, #backlight, #network, #pulseaudio, #custom-media, #tray, #mode, #idle_inhibitor, #mpd{
-    padding: 0 4px;
+
+.modules-right {
+    transition: none;
+    background: @base;
     color: @text;
-    background-color: @mantle;
-    border-radius: 2px;
-    margin: 4px 1px;
+    margin: 8px 8px 0;
+    padding-left: 4px;
+    padding-right: 4px;
+    border-radius: 32px;
+}
+
+#language, #clock, #battery, #cpu, #memory, #disk, #temperature, #backlight, #network, #pulseaudio, #custom-media, #tray, #mode, #idle_inhibitor, #mpd, #custom-loadavg {
+    padding: 0 8px;
 }
 
 #window {
-    color: @yellow;
-    font-weight: 800;
-}
-
-/* If workspaces is the leftmost module, omit left margin */
-.modules-left > widget:first-child > #workspaces {
-    margin-left: 0;
-}
-
-/* If workspaces is the rightmost module, omit right margin */
-.modules-right > widget:last-child > #workspaces {
-    margin-right: 0;
-}
-
-@keyframes blink {
-    to {
-        background-color: #888888;
-        color: #000000;
-    }
+    color: transparent;
+    background-color: transparent;
 }
 
 #battery.critical:not(.charging) {
@@ -80,6 +81,4 @@ label:focus {
     padding: 0 4px;
     min-width: 16px;
 }
-
-
 
