--- a/configs/waybar/style.css
+++ b/configs/waybar/style.css
@@ -9,14 +9,15 @@
 }
 
 window#waybar {
-    /*background-color: @base;*/
     color: transparent;
-    background: transparent;
-    padding-left: 16px;
-    padding-right: 16px;
+    background: none;
+    padding-top: 0;
+    padding-bottom: 0;
     margin-top: 8px;
     border-radius: 32px;
 }
+
+
 
 #workspaces {
     background: @base;
