--- a/configs/waybar/style.css
+++ b/configs/waybar/style.css
@@ -1,6 +1,6 @@
 @import "macchiato.css";
 * {
-    font-family: "JetBrains Mono", "Noto Sans";
+    font-family: "Ubuntu", "Noto Sans";
     font-size: 9pt;
     border: none;
     font-weight: 400;
